--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,17 @@
     margin-left: 20px;
     text-decoration: none;
     border-radius: 10px;
-    height: 30px;
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
-.navLink:hover {
-    border-bottom-style: solid;
-}
+
 .headerContainer {
-    height: 40px;
     border-bottom: 1px solid black;
-    padding: 20px;
+    padding: 10px;
     background-color: #24252A;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
 }
